[FEATURE-4284] Elimanados imports y variables innecesarios ademas de Solventar algunos problemas del sonar. refs #4284 @2h