@@ -1,7 +1,6 @@
 package es.udc.fi.dc.fd.rest.dtos;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import es.udc.fi.dc.fd.model.entities.Notification;
 
@@ -11,6 +10,6 @@ public class NotificationConversor {
     }
 
     public static List<NotificationDto> toNotificationDtos(List<Notification> notifications) {
-        return notifications.stream().map(c -> toNotificationDto(c)).collect(Collectors.toList());
+        return notifications.stream().map(c -> toNotificationDto(c)).toList();
     }
 }
