@@ -7,10 +7,7 @@ import es.udc.fi.dc.fd.model.services.Block;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collector;
 import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.stream.Collectors;
 import es.udc.fi.dc.fd.model.entities.Avatar;
 
 
@@ -36,7 +33,7 @@ public class UserConversor {
 									.orElse(Collections.emptyList())
 									.stream()
 									.map(Users::getId)
-									.collect(Collectors.toList());
+									.toList();
 
 
 		return new UserDto(user.getId(), user.getUserName(), user.getFirstName(), user.getLastName(), user.getEmail(),
@@ -80,7 +77,7 @@ public class UserConversor {
 
 		List<Users> listOfUsers = users.getItems();
 
-		List<UserDto> listOfUserDto =  listOfUsers.stream().map(u -> toUserDto(u)).collect(Collectors.toList()); 
+		List<UserDto> listOfUserDto =  listOfUsers.stream().map(u -> toUserDto(u)).toList(); 
 
 		return new BlockDto<>(listOfUserDto, users.getExistMoreItems());
 	}
@@ -91,8 +88,8 @@ public class UserConversor {
 	}
 
 	public static final BlockDto<ResumeUserDto> toBlockResumeUserDto(Block<Users> userBlock){
-		List<ResumeUserDto> list = userBlock.getItems().stream().map(u -> toResumeUserDto(u)).collect(Collectors.toList());
-		return new BlockDto<ResumeUserDto>(list ,userBlock.getExistMoreItems());
+		List<ResumeUserDto> list = userBlock.getItems().stream().map(u -> toResumeUserDto(u)).toList();
+		return new BlockDto<>(list ,userBlock.getExistMoreItems());
 	}
 
 
